# boilerplate-fastapi

./: .gitignore  README.md  api-user.Dockerfile  docker-compose.yml  main.py  pyproject.toml  pytest.ini
docker/api/: Dockerfile  startup.sh
docker/db/: Dockerfile
migrations/: env.py
migrations/versions/: 1c5a69c3f642_init_migrations.py  e5d5a2067ea8_init_migrations.py
src/: main.py
src/common/auth/: __init__.py
src/common/cipher/: __init__.py
src/common/config/: __init__.py
src/common/database/: __init__.py  model.py  session.py
src/common/exception/: __init__.py  failure_type.py
src/common/logger/: __init__.py
src/common/parser/: __init__.py
src/common/response/: __init__.py
src/product/controller/: __init__.py  product_controller.py
src/product/interface/: product_dto.py  product_enum.py  product_request.py  product_response.py
src/product/model/: __init__.py  product_model.py
src/product/repository/: product_repository.py
src/product/service/: product_service.py
src/user/controller/: __init__.py  user_controller.py
src/user/interface/: user_dto.py  user_request.py  user_response.py
src/user/model/: user_model.py
src/user/repository/: user_repository.py
src/user/service/: user_service.py
tests/: conftest.py
tests/src/product/service/: test_product_service.py
tests/src/user/service/: test_user_service.py
tests/user/controller/: test_user_controller.py
