[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Harry <tothefullest08@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.17"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
SQLAlchemy = "^2.0.19"
pydantic-settings = "^2.0.2"
psycopg2-binary = "^2.9.7"
python-jose = "^3.3.0"
passlib = "^1.7.4"
alembic = "^1.11.2"
pytest = "^7.4.0"
test_client = "^0.1"
bcrypt = "<4.0.0"
SQLAlchemy-Utils = "^0.41.1"
pymysql = "^1.1.0"
pytest-xdist = "^3.3.1"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
